--- a/css/main.css
+++ b/css/main.css
@@ -329,3 +329,10 @@ body {
   a:hover {
     text-decoration: underline;
   }
+
+  @media screen and (max-width: 600px) {
+    /* Styles for screens with a width of 600 pixels or less */
+    .container {
+      width: 100%;
+    }
+  }
